tests/baselines/reference/es6ImportEqualsDeclaration2.errors.txt
server.d.ts(8,5): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== server.d.ts (1 errors) ====
    declare module "other" {
        export class C { }
    }
    
    declare module "server" {
        import events = require("other"); // Ambient declaration, no error expected.
    
        module S {
        ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            export var a: number;
        }
    
        export = S; // Ambient declaration, no error expected.
    }
    
==== client.ts (0 errors) ====
    import {a} from "server";
    